added data-ng-smooth-scroll to html

--- a/example.html
+++ b/example.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html ng-app='example'>
+<html ng-app='example' ng-smooth-scroll>
   <head>
   <title>Angular Smooth Scroll Example</title>
   <style>
