added extra boxes

--- a/example.html
+++ b/example.html
@@ -15,12 +15,13 @@
 <a href="#two" class='scroll-to'>Two</a>
 
 <div class='box'></div>
-<a name='one'></a>
+<a name='one'>one target</onea>
 <div>One Point Here</div>
 
 <div class='box'></div>
-<a name='two'></a>
+<a name='two'>two target</a>
 <div>Two Point Here</div>
+<div class='box'></div>
 
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="https://code.angularjs.org/1.2.21/angular.js"></script>
